--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
         <!-- Redes sociales -->
         <div class="social-links" aria-label="Redes sociales">
-            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-github"></i></a>
             <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
@@ -145,36 +144,46 @@
     </section>
 
     <!-- Sección 'Proyectos' -->
-    <section id="projects" aria-labelledby="projects-title">
-        <h2 id="projects-title">Proyectos</h2>
-        <div class="project-item">
-          <div class="project-item">
-            <img src="img/Captura de pantalla 2024-10-04 183918.png" alt="Captura de pantalla del proyecto" class="project-img">
-            <h3>Tienda</h3>
-            <p>Descripción breve del proyecto. Tecnologías y funcionalidades implementadas.</p>
-            <a href="https://github.com/1089196040/Tienda.git" target="_blank" class="button">Ver en GitHub</a>
-            <a href="https://vercel.com/1089196040s-projects" target="_blank" class="button">Demo del Proyecto</a>
-          </div>
-            <img src="img/Captura de pantalla 2024-10-04 183807.png" alt="Captura de pantalla del proyecto" class="project-img">
-            <h3>App encriptadora de textos</h3>
-            <p>Descripción breve del proyecto. Tecnologías y funcionalidades implementadas.</p>
-            <a href="https://github.com/1089196040/App-encriptadora-de-textos.git" target="_blank" class="button">Ver en GitHub</a>
-            <a href="https://vercel.com/1089196040s-projects/app-encriptadora-de-textos" target="_blank" class="button">Demo del Proyecto</a>
-        </div>
-        <div class="project-item">
-          <img src="ruta-del-proyecto.jpg" alt="Captura de pantalla del proyecto" class="project-img">
-          <h3>Mi Portafolio</h3>
-          <p>Descripción breve del proyecto. Tecnologías y funcionalidades implementadas.</p>
-          <a href="https://github.com/1089196040/Tienda.git" target="_blank" class="button">Ver en GitHub</a>
-          <a href="https://vercel.com/1089196040s-projects" target="_blank" class="button">Demo del Proyecto</a>
-      </div>
-      
-        <!-- Repite el bloque de project-item para más proyectos -->
-    </section>
+<section id="projects" aria-labelledby="projects-title">
+  <h2 id="projects-title">Proyectos</h2>
+  <div class="project-item">
+      <img src="img/Captura de pantalla 2024-10-04 183918.png" alt="Captura de pantalla del proyecto Tienda" class="project-img">
+      <h3>Tienda</h3>
+      <p>Este proyecto es una aplicación de tienda en línea, que permite la compra y gestión de productos. Implementada con React y Node.js.</p>
+      <a href="https://github.com/1089196040/Tienda.git" target="_blank" class="button">Ver en GitHub</a>
+      <a href="https://tienda-mocha.vercel.app/" target="_blank" class="button">Demo del Proyecto</a>
+  </div>
+  
+  <div class="project-item">
+      <img src="img/Captura de pantalla 2024-10-04 183807.png" alt="Captura de pantalla del proyecto App encriptadora de textos" class="project-img">
+      <h3>App Encriptadora de Textos</h3>
+      <p>Una aplicación para encriptar y desencriptar textos con diversas claves, usando JavaScript y HTML5.</p>
+      <a href="https://github.com/1089196040/App-encriptadora-de-textos.git" target="_blank" class="button">Ver en GitHub</a>
+      <a href="https://app-encriptadora-de-textos.vercel.app/" target="_blank" class="button">Demo del Proyecto</a>
+  </div>
+  
+  <div class="project-item">
+      <img src="img/Captura de pantalla 2024-10-04 185401.png" alt="Captura de pantalla del proyecto Mi Portafolio" class="project-img">
+      <h3>Mi Portafolio</h3>
+      <p>Portafolio personal que muestra mis proyectos, habilidades y trayectoria como desarrollador web.</p>
+      <a href="https://github.com/1089196040/Tienda.git" target="_blank" class="button">Ver en GitHub</a>
+      <a href="https://vercel.com/1089196040s-projects" target="_blank" class="button">Demo del Proyecto</a>
+  </div>
+  
+  <!-- Añade más proyectos repitiendo este bloque de .project-item -->
+</section>
+
 
     <!-- Sección 'Contacto' -->
     <section id="contact" aria-labelledby="contact-title">
         <h2 id="contact-title">Contacto</h2>
+        <p>
+          ¿Quieres contactarme?
+        </p>
+        <p>
+          Completa el siguiente formulario y me pondré en contacto con usted lo mas pronto posible.
+        </p>
+        <br>
         <form action="#" method="post" aria-labelledby="contact-form">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
@@ -182,7 +191,7 @@
             <label for="email">Correo Electrónico:</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="subject">Tema:</label>
+            <label for="subject">Asunto:</label>
             <input type="text" id="subject" name="subject" required>
 
             <label for="message">Mensaje:</label>
