--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <div class="project-item">
       <img src="img/Captura de pantalla 2024-10-04 183918.png" alt="Captura de pantalla del proyecto Tienda" class="project-img">
       <h3>Tienda</h3>
-      <p>Este proyecto es una aplicación de tienda en línea, que permite la compra y gestión de productos. Implementada con React y Node.js.</p>
+      <p>Este proyecto es una aplicación de tienda en línea. Implementada con React y Node.js.</p>
       <a href="https://github.com/1089196040/Tienda.git" target="_blank" class="button">Ver en GitHub</a>
       <a href="https://tienda-mocha.vercel.app/" target="_blank" class="button">Demo del Proyecto</a>
   </div>
@@ -157,7 +157,7 @@
   <div class="project-item">
       <img src="img/Captura de pantalla 2024-10-04 183807.png" alt="Captura de pantalla del proyecto App encriptadora de textos" class="project-img">
       <h3>App Encriptadora de Textos</h3>
-      <p>Una aplicación para encriptar y desencriptar textos con diversas claves, usando JavaScript y HTML5.</p>
+      <p>Una aplicación para encriptar y desencriptar textos con diversas claves, usando HTML, CSS y JavaScript.</p>
       <a href="https://github.com/1089196040/App-encriptadora-de-textos.git" target="_blank" class="button">Ver en GitHub</a>
       <a href="https://app-encriptadora-de-textos.vercel.app/" target="_blank" class="button">Demo del Proyecto</a>
   </div>
