--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
       <img src="img/Captura de pantalla 2024-10-04 185401.png" alt="Captura de pantalla del proyecto Mi Portafolio" class="project-img">
       <h3>Mi Portafolio</h3>
       <p>Portafolio personal que muestra mis proyectos, habilidades y trayectoria como desarrollador web.</p>
-      <a href="https://github.com/1089196040/Tienda.git" target="_blank" class="button">Ver en GitHub</a>
-      <a href="https://vercel.com/1089196040s-projects" target="_blank" class="button">Demo del Proyecto</a>
+      <a href="https://github.com/1089196040/Mi-Portafolio.git" target="_blank" class="button">Ver en GitHub</a>
+      <a href="https://mi-portafolio-seven-rose.vercel.app/" target="_blank" class="button">Demo del Proyecto</a>
   </div>
   
   <!-- Añade más proyectos repitiendo este bloque de .project-item -->
