--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         <!-- Redes sociales -->
         <div class="social-links" aria-label="Redes sociales">
-            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-github"></i></a>
-            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/1089196040" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/jhan-carlos-tobar-getial-b08b82235/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
 
         <!-- Datos personales -->
@@ -169,8 +169,6 @@
       <a href="https://github.com/1089196040/Mi-Portafolio.git" target="_blank" class="button">Ver en GitHub</a>
       <a href="https://mi-portafolio-seven-rose.vercel.app/" target="_blank" class="button">Demo del Proyecto</a>
   </div>
-  
-  <!-- Añade más proyectos repitiendo este bloque de .project-item -->
 </section>
 
 
