--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2 id="about-title">Acerca de mí</h2>
 
         <!-- Imagen de perfil -->
-        <img src="img/WhatsApp Image 2024-08-22 at 4.49.23 PM.jpeg" alt="Foto de perfil de Jhan Carlos Tobar Getial" class="profile-img">
+        <img src="img/Captura de pantalla 2024-10-08 123713-j-Photoroom.jpg" alt="Foto de perfil de Jhan Carlos Tobar Getial" class="profile-img">
 
         <!-- Redes sociales -->
         <div class="social-links" aria-label="Redes sociales">
