--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="social-links" aria-label="Redes sociales">
             <a href="https://github.com/1089196040" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/jhan-carlos-tobar-getial-b08b82235/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/jhank_2001/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-instagram"></i></a>
         </div>
 
         <!-- Datos personales -->
@@ -163,7 +164,7 @@
   </div>
   
   <div class="project-item">
-      <img src="img/Captura de pantalla 2024-10-04 185401.png" alt="Captura de pantalla del proyecto Mi Portafolio" class="project-img">
+      <img src="img/Captura de pantalla 2024-10-08 124511.png" alt="Captura de pantalla del proyecto Mi Portafolio" class="project-img">
       <h3>Mi Portafolio</h3>
       <p>Portafolio personal que muestra mis proyectos, habilidades y trayectoria como desarrollador web.</p>
       <a href="https://github.com/1089196040/Mi-Portafolio.git" target="_blank" class="button">Ver en GitHub</a>
