--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
       <a href="https://github.com/1089196040/Mi-Portafolio.git" target="_blank" class="button">Ver en GitHub</a>
       <a href="https://mi-portafolio-seven-rose.vercel.app/" target="_blank" class="button">Demo del Proyecto</a>
   </div>
+  <div class="project-item">
+    <img src="img/Captura de pantalla 2024-10-09 132626.png" alt="Captura de pantalla del proyecto Mi Portafolio" class="project-img">
+    <h3>Sistema Gestión de Inventario</h3>
+    <p>Este proyecto permite agregar, editar y vender productos, usando HTM, CSS y JavaScript.</p>
+    <a href="https://github.com/1089196040/App-Tienda-.git" target="_blank" class="button">Ver en GitHub</a>
+    <a href="https://app-tienda-lake.vercel.app/" target="_blank" class="button">Demo del Proyecto</a>
+</div>
 </section>
 
 
